--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,35 @@
 
 apply plugin: 'java'
 apply plugin: 'maven'
+apply plugin: 'signing'
 
 group = 'org.spearal'
 version =  spearalVersion
+description = 'Spearal JPA'
 
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+configurations {
+	deployerJars
+}
+
+dependencies {
+	
+	compile "org.spearal:spearal-java:${spearalVersion}"
+	compile 'org.javassist:javassist:3.18.2-GA'
+	compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
+	compile 'javax.enterprise:cdi-api:1.2'
+	
+	testCompile 'junit:junit:4.11'
+	testCompile 'org.hibernate:hibernate-core:4.3.5.Final'
+	testCompile 'org.hibernate:hibernate-entitymanager:4.3.5.Final'
+	
+	testRuntime 'com.h2database:h2:1.4.179'
+	
+	deployerJars 'org.apache.maven.wagon:wagon-http:2.2'
 }
 
 compileJava {
@@ -37,18 +59,42 @@ jar {
     version =  spearalVersion
 }
 
-dependencies {
-    
-    compile "org.spearal:spearal-java:${spearalVersion}"
-    compile 'org.javassist:javassist:3.18.2-GA'
-    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final'
-	compile 'javax.enterprise:cdi-api:1.2'
-    
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.hibernate:hibernate-core:4.3.5.Final'
-    testCompile 'org.hibernate:hibernate-entitymanager:4.3.5.Final'
-    
-    testRuntime 'com.h2database:h2:1.4.179'
+javadoc {
+	title "${project.description} API Documentation"
+	
+	configure(options) {
+		version = true
+		author = true
+		use = true
+		windowTitle = "${project.description} API Documentation"
+		docTitle = "${project.description} API Documentation ${spearalVersion}"
+	}
+}
+
+task sourcesJar(type: Jar, dependsOn: 'classes') {
+	classifier = 'sources'
+	from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: 'javadoc') {
+	classifier = 'javadoc'
+	from javadoc.destinationDir
+}
+	
+artifacts {
+	archives sourcesJar
+	archives javadocJar
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.12'
+}
+
+signing {
+	required {
+		gradle.taskGraph.hasTask('uploadArchives')
+	}
+	sign configurations.archives
 }
 
 install {
@@ -60,15 +106,53 @@ install {
 	}
 }
 
-task sourcesJar(type: Jar, dependsOn: 'classes') {
-	classifier = 'sources'
-	from sourceSets.main.allSource
-}
-
-artifacts {
-	archives sourcesJar
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.12'
+uploadArchives {
+	repositories {
+		mavenDeployer {
+			beforeDeployment {
+				MavenDeployment deployment -> signing.signPom(deployment)
+			}
+			
+			repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+				authentication(userName: sonatypeOssUserName, password: sonatypeOssPassword)
+			}
+			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+				authentication(userName: sonatypeOssUserName, password: sonatypeOssPassword)
+			}
+			
+			pom.project {
+				name 'Spearal JPA'
+				description project.description
+				url 'http://www.spearal.io'
+				
+				scm {
+					url 'scm:git@github.com:spearal/spearal-jpa2.git'
+					connection 'scm:git@github.com:spearal/spearal-jpa2.git'
+					developerConnection 'scm:git@github.com:spearal/spearal-jpa2.git'
+				}
+				
+				licenses {
+					license {
+						name 'Apache License, Version 2.0'
+						url 'http://www.apache.org/licenses/LICENSE-2.0'
+						distribution 'repo'
+					}
+				}
+				
+				developers {
+					developer {
+						id 'fwolff'
+						name 'Franck Wolff'
+					}
+					developer {
+						id 'wdrai'
+						name 'William Drai'
+					}
+				}
+			}
+			
+			// Generated dependencies are not suitable for maven pom, remove everything for now
+			pom.whenConfigured { pom -> pom.dependencies.clear() }
+		}
+	}
 }
